--- a/package.json
+++ b/package.json
@@ -7,9 +7,18 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "crypto-browserify": "^3.12.0",
+    "echarts": "^5.4.1",
+    "element-ui": "^2.15.12",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "nprogress": "^0.2.0",
+    "stream-browserify": "^3.0.0",
+    "util": "^0.12.5",
     "vue": "^2.6.14",
-    "vue-router": "^3.5.1"
+    "vue-router": "^3.5.1",
+    "vue-table-with-tree-grid": "^0.2.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
